Fix image source path in footer component for correct logo display

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer-container">
   <div class="footer-content">
     <div class="footer-logo">
-      <img src="/univalle_1.png" alt="Logo Univalle" class="univalle-logo">
+      <img src="univalle_1.png" alt="Logo Univalle" class="univalle-logo">
       <span class="univalle-name">Universidad del Valle, sede Tuluá</span>
     </div>
     <div class="footer-info">
